--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <title>Weather Application</title>
   </head>
   <body>
@@ -24,16 +32,36 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Tehran</h1>
+        <div class="weather-app-data">
+          <div>
+            <h1>Tehran</h1>
+            <p>
+              <span id="time">Sunday 13:15</span>,
+              <span id="condition">clear sky</span>
+              <br />
+              Humidity: <strong id="humidity">5%</strong>, Wind:
+              <strong id="wind-speed">13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-temperature-container">
+            <div class="icon" id="icon"></div>
+            <div class="current-temperature" id="current-temperature">30</div>
+            <div class="unit">℃</div>
+          </div>
         </div>
+        <div class="weather-forecast" id="weather-forecast"></div>
       </main>
       <footer>
         This project was coded by
         <a href="https://github.com/Shaghayegh9473">Shaghayegh K.</a>, is
-        open-sourced on <a href="">GitHub</a> and hosted on
+        open-sourced on
+        <a href="https://github.com/Shaghayegh9473/Final-Weather-Application"
+          >GitHub</a
+        >
+        and hosted on
         <a href="">Netlify</a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
