Added CSS codes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Weather Application</title>
   </head>
   <body>
-    <div>
+    <div class="weather-application">
       <header>
         <form id="search-form">
           <input
@@ -34,7 +34,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1>Tehran</h1>
+            <h1 class="weather-city" id="weather-city">Tehran</h1>
             <p>
               <span id="time">Sunday 13:15</span>,
               <span id="condition">clear sky</span>
