Added JS codes and injected codes from HTML to JS

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
               <span id="time">Sunday 13:15</span>,
               <span id="condition">clear sky</span>
               <br />
-              Humidity: <strong id="humidity">5%</strong>, Wind:
+              Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed">13km/h</strong>
             </p>
           </div>
           <div class="weather-temperature-container">
-            <div class="icon" id="icon"></div>
+            <div id="icon"></div>
             <div class="current-temperature" id="current-temperature">30</div>
             <div class="unit">℃</div>
           </div>
