Add the link and removed the basic data

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-city" id="weather-city">Tehran</h1>
+            <h1 class="weather-city" id="weather-city"></h1>
             <p>
-              <span id="time">Sunday 13:15</span>,
-              <span id="condition">clear sky</span>
+              <span id="time"></span>,
+              <span id="condition"></span>
               <br />
               Humidity: <strong id="humidity"></strong>, Wind:
-              <strong id="wind-speed">13km/h</strong>
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-temperature-container">
             <div id="icon"></div>
-            <div class="current-temperature" id="current-temperature">30</div>
+            <div class="current-temperature" id="current-temperature"></div>
             <div class="unit">℃</div>
           </div>
         </div>
@@ -59,7 +59,7 @@
           >GitHub</a
         >
         and hosted on
-        <a href="">Netlify</a>
+        <a href="https://tempestas-weather-application.netlify.app/">Netlify</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
