fixed an issue on HTML

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form id="search-form">
           <input
             type="search"
-            value="Enter a city..."
+            placeholder="Enter a city..."
             class="search-box"
             id="search-box"
           />
